# rinha-backend-2024-q1

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose-mongodb.yml  docker-compose-mysql.yml  docker-compose-surrealdb.yml  docker-compose.yml  prisma.sh
.cargo/: config.toml
prisma/: Cargo.toml  schema.prisma
prisma-cli/: Cargo.toml
prisma/src/: lib.rs
src/: main.rs
src/controllers/: customer_controller.rs
src/models/: customer_model.rs  mod.rs  transaction_model.rs
src/repository/: customer_repository.rs  mod.rs  transaction_repository.rs
src/shared/: api.rs  error.rs  mod.rs  utils.rs
