[package]
name = "rinha-backend-2024-q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["prisma-cli"]
resolver = "2"

[dependencies]
db = { path = "./prisma" }

rocket = { version = "=0.5.0", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.32.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
thiserror = "1.0.49"
crypto = "0.5.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
bcrypt = "0.15.0"
uuid = "1.4.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
