[package]
name = "rinha-backend-2024-q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
thiserror = "1.0.49"
crypto = "0.5.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
bcrypt = "0.15.0"
uuid = "1.4.1"
mongodb = "2.8.1"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
